Adding Current and Resistance Calculations

--- a/templates/electrical_power.html
+++ b/templates/electrical_power.html
@@ -10,8 +10,8 @@
                 <hr>
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav flex-column btn btn-outline-info m-1" href="{{ url_for('power') }}">Power</a>
-                    <a class="nav flex-column btn btn-outline-info m-1" href="#">Current</a>
-                    <a class="nav flex-column btn btn-outline-info m-1" href="#">Resistance</a>
+                    <a class="nav flex-column btn btn-outline-info m-1" href="{{ url_for('current') }}">Current</a>
+                    <a class="nav flex-column btn btn-outline-info m-1" href="{{ url_for('resistance') }}">Resistance</a>
                 </div>
             </div>
 
