--- a/engineering_app/templates/calc_power.html
+++ b/engineering_app/templates/calc_power.html
@@ -5,30 +5,29 @@
 <div class="container row justify-content-left p-2">
     <h6>Fill the form</h6>
     <div class=" container col-md-5 border border-round p-4 m-2">
-        <h4 class="text-center">Current Calculation</h4>
+        <h4 class="text-center">Power Calculation</h4>
         <hr>
         <h6>Formula</h6>
-        <small>I = P/V</small>
+        <small>P = VI</small>
         <br>
         <small>P = power(watts), V = voltage(V), I = current(amps)</small>
         <hr>
         <form method="POST" class="mt-3" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
-            {{ form.csrf_token }}
-            <div class="form-group">
-                {{ p_calc.pow_calc.label(class="form-control-label mb-2") }}
-                {% if p_calc.pow_calc.errors %}
-                    {{ p_calc.vol_calc(class="form-control mb-2 is-invalid") }}
-                {% else %}
-                    {{ p_calc.pow_calc(class="form-control mb-2") }}
-                {% endif %}
-            </div>
             <div class="form-group">
                 {{ p_calc.vol_calc.label(class="form-control-label mb-2") }}
                 {% if p_calc.vol_calc.errors %}
                     {{ p_calc.vol_calc(class="form-control mb-2 is-invalid") }}
                 {% else %}
                     {{ p_calc.vol_calc(class="form-control mb-2") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ p_calc.amps_calc.label(class="form-control-label mb-2") }}
+                {% if p_calc.amps_calc.errors %}
+                    {{ p_calc.amps_calc(class="form-control mb-2 is-invalid") }}
+                {% else %}
+                    {{ p_calc.amps_calc(class="form-control mb-2") }}
                 {% endif %}
             </div>
             <div class="form-group">
@@ -41,12 +40,12 @@
         <h4>Answers:</h4>
         <hr>
         <h6>Formula</h6>
-        <h6>I = P/V</h6>
+        <h6>P = VI</h6>
         <small>P = power(watts), V = voltage(V), I = current(amps)</small>
         <hr>
         <div class="container border border-round p-4 m-2 mt-4">
-            <h6>P = {{ answers['power'] }} V * {{ answers['voltage'] }} A</h6>
-            <h6>Power = <strong class="underline">{{ answers['current'] }}</strong> Amps</h6>
+            <h6>P = {{ answers['voltage'] }} V * {{ answers['current'] }} A</h6>
+            <h6>Power = <strong class="underline">{{ answers['power'] }}</strong> Watts</h6>
         </div>
     </div>
     {% endif %}
