adding route.sched_loads and template

--- a/engineering_app/templates/base.html
+++ b/engineering_app/templates/base.html
@@ -35,9 +35,10 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="{{ url_for('solar') }}">Solar OffGrid</a></li>
-                      <li><a class="dropdown-item" href="{{ url_for('electrical_power') }}">Ohms Law Calculations</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('sched_loads') }}">Schedule Of Loads</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('electrical_power') }}">Basic Calculations</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Future Development</a></li>
                     </ul>
                   </li>
                   <!-- <li class="nav-item dropdown">
