--- a/engineering_app/templates/electrical_power.html
+++ b/engineering_app/templates/electrical_power.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container mt-2">
-        <h1 class="h1 mt-5 text-center">Ohms Law Calculations</h1>
+        <h1 class="h1 mt-5 text-center">Basic Calculations</h1>
         <hr>
         <div class="row">
             <div class="col-2 border border-2 border-round p-3 m-2 mx-auto">
