--- a/engineering_app/templates/solar.html
+++ b/engineering_app/templates/solar.html
@@ -131,7 +131,7 @@
                 
                         </fieldset>
                         <div class="form-group">
-                            {{ form.submit(class="btn btn-primary mt-2") }}
+                            {{ form.submit(class="btn btn-outline-info mt-2") }}
                         </div>
                     </div>
                 </div>
