--- a/engineering_app/templates/sched_loads.html
+++ b/engineering_app/templates/sched_loads.html
@@ -110,7 +110,9 @@
                     {% endif %}
                 </div>
             </div>
+            
             <div class="row form-group mt-2 mx-1">
+                <small class="text-primary mt-2">Note: Ranges from 120V-240V AC</small>
                 <div class="col-md-2 p-1 m-1">
                     {{ form.voltage.label(class="form-control-label mb-2") }}
                     {% if form.voltage.errors %}
